[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Actors/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/tiles/TileSet.tres" type="TileSet" id=2]
[ext_resource path="res://src/UserInterface/TouchControl.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Objects/shop/Shop.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Levels/Shop/ShopLevel1.gd" type="Script" id=5]
[ext_resource path="res://src/UserInterface/ShoppingList.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/UserInterface/PauseMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Background/ParallaxBackground.tscn" type="PackedScene" id=8]

[node name="ShopLevel1" type="Node2D"]
position = Vector2( -1, -1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ 1088.0, 1088.0 ],
"_edit_vertical_guides_": [ 1920.0 ]
}

[node name="InterfaceLayer" type="CanvasLayer" parent="."]

[node name="ShoppingList" parent="InterfaceLayer" instance=ExtResource( 6 )]

[node name="Control" parent="InterfaceLayer" instance=ExtResource( 3 )]
margin_left = -8.0
margin_right = -8.0

[node name="PauseMenu" parent="InterfaceLayer" instance=ExtResource( 7 )]

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -1, 0 )
scale = Vector2( 0.5, 0.5 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 128, 128 )
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( -130943, 1, 0, -130942, 1, 0, -130941, 1, 0, -130940, 1, 0, -65409, 1, 0, -65408, 1, 0, -65407, 1, 0, 0, 0, 7, 1, 0, 196612, 2, 0, 196612, 3, 0, 196612, 4, 0, 196612, 5, 0, 196612, 6, 0, 196612, 7, 0, 196612, 8, 0, 196612, 9, 0, 8, 126, 1, 0, 127, 1, 0, 65536, 0, 131076, 65537, 0, 131078, 65538, 0, 131078, 65539, 0, 131078, 65540, 0, 131078, 65541, 0, 131078, 65542, 0, 131078, 65543, 0, 131078, 65544, 0, 131078, 65545, 0, 131077, 65661, 1, 0, 65662, 1, 0, 131072, 0, 131076, 131073, 0, 131078, 131074, 0, 131078, 131075, 0, 131078, 131076, 0, 131078, 131077, 0, 131078, 131078, 0, 131078, 131079, 0, 131078, 131080, 0, 131078, 131081, 0, 131077, 131196, 1, 0, 196608, 0, 131076, 196609, 0, 131078, 196610, 0, 131078, 196611, 0, 131078, 196612, 0, 131078, 196613, 0, 131078, 196614, 0, 131078, 196615, 0, 131078, 196616, 0, 131078, 196617, 0, 131077, 196731, 1, 0, 262144, 0, 131076, 262145, 0, 131078, 262146, 0, 131078, 262147, 0, 131078, 262148, 0, 131078, 262149, 0, 131078, 262150, 0, 131078, 262151, 0, 131078, 262152, 0, 131078, 262153, 0, 131077, 262266, 1, 0, 262267, 1, 0, 327680, 0, 131076, 327681, 0, 131078, 327682, 0, 131078, 327683, 0, 131078, 327684, 0, 131078, 327685, 0, 131078, 327686, 0, 131078, 327687, 0, 131078, 327688, 0, 131078, 327689, 0, 131077, 327802, 1, 0, 393216, 0, 131076, 393217, 0, 131078, 393218, 0, 131078, 393219, 0, 131078, 393220, 0, 131078, 393221, 0, 131078, 393222, 0, 131078, 393223, 0, 131078, 393224, 0, 131078, 393225, 0, 131077, 393338, 1, 0, 458752, 0, 131076, 458753, 0, 131078, 458754, 0, 131078, 458755, 0, 131078, 458756, 0, 131078, 458757, 0, 131078, 458758, 0, 131078, 458759, 0, 131078, 458760, 0, 131078, 458761, 0, 131077, 458872, 1, 0, 458873, 1, 0, 524288, 0, 131076, 524289, 0, 131078, 524290, 0, 131078, 524291, 0, 131078, 524292, 0, 131078, 524293, 0, 131078, 524294, 0, 131078, 524295, 0, 131078, 524296, 0, 131078, 524297, 0, 131077, 589824, 0, 131076, 589825, 0, 131078, 589826, 0, 131078, 589827, 0, 131078, 589828, 0, 131078, 589829, 0, 131078, 589830, 0, 131078, 589831, 0, 131078, 589832, 0, 131078, 589833, -1073741824, 131077, 655360, 0, 131076, 655361, 0, 131078, 655362, 0, 131078, 655363, 0, 131078, 655364, 0, 131078, 655365, 0, 131078, 655366, 0, 131078, 655367, 0, 131078, 655368, 0, 131078, 655369, -1073741824, 131077, 655475, 1, 0, 655476, 1, 0, 720896, 0, 131076, 720897, 0, 131078, 720898, 0, 131078, 720899, 0, 131078, 720900, 0, 131078, 720901, 0, 131078, 720902, 0, 131078, 720903, 0, 131078, 720904, 0, 131078, 720905, 0, 131077, 721007, 1, 0, 721008, 1, 0, 721009, 1, 0, 721010, 1, 0, 786432, 0, 131076, 786433, 0, 131078, 786434, 0, 131078, 786435, 0, 131078, 786436, 0, 131078, 786437, 0, 131078, 786438, 0, 131078, 786439, 0, 131078, 786440, 0, 131078, 786441, 0, 131077, 786542, 1, 0, 786543, 1, 0, 851968, 0, 131076, 851969, 0, 131078, 851970, 0, 131078, 851971, 0, 131078, 851972, 0, 131078, 851973, 0, 131078, 851974, 0, 131078, 851975, 0, 131078, 851976, 0, 131078, 851977, 0, 131077, 852006, 1, 0, 852007, 1, 0, 852078, 1, 0, 917504, 0, 131076, 917505, 0, 131078, 917506, 0, 131078, 917507, 0, 131078, 917508, 0, 131078, 917509, 0, 131078, 917510, 0, 131078, 917511, 0, 131078, 917512, 0, 131078, 917513, 0, 196608, 917514, 0, 196612, 917515, 0, 196612, 917516, 0, 196612, 917517, 0, 196612, 917518, 0, 196612, 917519, 0, 196612, 917520, 0, 196612, 917521, 0, 196612, 917522, 0, 196612, 917523, 0, 196612, 917524, 0, 196612, 917525, 0, 196612, 917526, 0, 196612, 917527, 0, 196612, 917528, 0, 196612, 917529, 0, 196612, 917530, 0, 196612, 917531, 0, 196612, 917532, 0, 196612, 917533, 0, 196612, 917534, 0, 196612, 917535, 0, 196612, 917536, 0, 196612, 917537, 0, 196612, 917538, 0, 196612, 917539, 0, 196612, 917540, 0, 196612, 917541, 0, 196612, 917542, 0, 196612, 917543, 0, 196612, 917544, 0, 196612, 917545, 0, 196612, 917546, 0, 196612, 917547, 0, 196612, 917548, 0, 196612, 917549, 0, 196612, 917550, 0, 196612, 917551, 0, 196612, 917552, 0, 196612, 917553, 0, 196612, 917554, 0, 196612, 917555, 0, 196612, 917556, 0, 196612, 917557, 0, 8, 917612, 1, 0, 917613, 1, 0, 983040, 0, 131076, 983041, 0, 131078, 983042, 0, 131078, 983043, 0, 131078, 983044, 0, 131078, 983045, 0, 131078, 983046, 0, 131078, 983047, 0, 131078, 983048, 0, 131078, 983049, 0, 131078, 983050, 0, 131078, 983051, 0, 131078, 983052, 0, 131078, 983053, 0, 131078, 983054, 0, 131078, 983055, 0, 131078, 983056, 0, 131078, 983057, 0, 131078, 983058, 0, 131078, 983059, 0, 131078, 983060, 0, 131078, 983061, 0, 131078, 983062, 0, 131078, 983063, 0, 131078, 983064, 0, 131078, 983065, 0, 131078, 983066, 0, 131078, 983067, 0, 131078, 983068, 0, 131078, 983069, 0, 131078, 983070, 0, 131078, 983071, 0, 131078, 983072, 0, 131078, 983073, 0, 131078, 983074, 0, 131078, 983075, 0, 131078, 983076, 0, 131078, 983077, 0, 131078, 983078, 0, 131078, 983079, 0, 131078, 983080, 0, 131078, 983081, 0, 131078, 983082, 0, 131078, 983083, 0, 131078, 983084, 0, 131078, 983085, 0, 131078, 983086, 0, 131078, 983087, 0, 131078, 983088, 0, 131078, 983089, 0, 131078, 983090, 0, 131078, 983091, 0, 131078, 983092, 0, 131078, 983093, 0, 131077, 983123, 1, 0, 983124, 1, 0, 983125, 1, 0, 983126, 1, 0, 983127, 1, 0, 983128, 1, 0, 983129, 1, 0, 983146, 1, 0, 983147, 1, 0, 983148, 1, 0, 1048576, 0, 65543, 1048577, 0, 196613, 1048578, 0, 196613, 1048579, 0, 196613, 1048580, 0, 196613, 1048581, 0, 196613, 1048582, 0, 196613, 1048583, 0, 196613, 1048584, 0, 196613, 1048585, 0, 196613, 1048586, 0, 196613, 1048587, 0, 196613, 1048588, 0, 196613, 1048589, 0, 196613, 1048590, 0, 196613, 1048591, 0, 196613, 1048592, 0, 196613, 1048593, 0, 196613, 1048594, 0, 196613, 1048595, 0, 196613, 1048596, 0, 196613, 1048597, 0, 196613, 1048598, 0, 196613, 1048599, 0, 196613, 1048600, 0, 196613, 1048601, 0, 196613, 1048602, 0, 196613, 1048603, 0, 196613, 1048604, 0, 196613, 1048605, 0, 196613, 1048606, 0, 196613, 1048607, 0, 196613, 1048608, 0, 196613, 1048609, 0, 196613, 1048610, 0, 196613, 1048611, 0, 196613, 1048612, 0, 196613, 1048613, 0, 196613, 1048614, 0, 196613, 1048615, 0, 196613, 1048616, 0, 196613, 1048617, 0, 196613, 1048618, 0, 196613, 1048619, 0, 196613, 1048620, 0, 196613, 1048621, 0, 196613, 1048622, 0, 196613, 1048623, 0, 196613, 1048624, 0, 196613, 1048625, 0, 196613, 1048626, 0, 196613, 1048627, 0, 196613, 1048628, 0, 196613, 1048629, 0, 65544, 1048630, 1, 0, 1048631, 1, 0, 1048632, 1, 0, 1048633, 1, 0, 1048634, 1, 0, 1048635, 1, 0, 1048636, 1, 0, 1048637, 1, 0, 1048638, 1, 0, 1048639, 1, 0, 1048640, 1, 0, 1048641, 1, 0, 1048642, 1, 0, 1048643, 1, 0, 1048644, 1, 0, 1048647, 1, 0, 1048648, 1, 0, 1048649, 1, 0, 1048650, 1, 0, 1048651, 1, 0, 1048652, 1, 0, 1048653, 1, 0, 1048654, 1, 0, 1048655, 1, 0, 1048656, 1, 0, 1048657, 1, 0, 1048658, 1, 0, 1048665, 1, 0, 1048666, 1, 0, 1048667, 1, 0, 1048668, 1, 0, 1048669, 1, 0, 1048670, 1, 0, 1048671, 1, 0, 1048672, 1, 0, 1048673, 1, 0, 1048674, 1, 0, 1048675, 1, 0, 1048676, 1, 0, 1048677, 1, 0, 1048678, 1, 0, 1048679, 1, 0, 1048680, 1, 0, 1048681, 1, 0, 1048682, 1, 0, 1048683, 1, 0, 1048684, 1, 0, 1048685, 1, 0, 1048686, 1, 0, 1048687, 1, 0, 1048688, 1, 0, 1048689, 1, 0, 1048690, 1, 0, 1048691, 1, 0, 1048692, 1, 0, 1048693, 1, 0, 1048694, 1, 0, 1048695, 1, 0, 1048696, 1, 0, 1048697, 1, 0, 1048698, 1, 0, 1048699, 1, 0, 1048700, 1, 0, 1048701, 1, 0, 1048702, 1, 0, 1048703, 1, 0, 1048704, 1, 0, 1048705, 1, 0, 1114241, 1, 0, 1114242, 1, 0, 1114243, 1, 0, 1114244, 1, 0, 1114245, 1, 0, 1114246, 1, 0, 1114247, 1, 0 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 1377.81, 767.566 )
collision_mask = 18
speed = Vector2( 800, 1800 )
gravity = 6000.0

[node name="ParallaxBackground" parent="." instance=ExtResource( 8 )]

[node name="Shop2" parent="." instance=ExtResource( 4 )]
position = Vector2( 3013.79, 632.745 )
z_index = -5
collision_layer = 8
collision_mask = 0
list = [ [ "Egg", 150 ], [ "Milk", 200 ], [ "Flour", 500 ] ]

[node name="Shop" parent="." instance=ExtResource( 4 )]
position = Vector2( 1502.31, 606.582 )
z_index = -5
collision_layer = 8
collision_mask = 0
[connection signal="Done" from="InterfaceLayer/ShoppingList" to="." method="_on_ShoppingList_Done"]
[connection signal="Bought" from="Shop2" to="." method="_on_Shop_Bought"]
[connection signal="ShopUI" from="Shop2" to="." method="_on_Shop_ShopUI"]
[connection signal="Bought" from="Shop" to="." method="_on_Shop_Bought"]
[connection signal="ShopUI" from="Shop" to="." method="_on_Shop_ShopUI"]
